test/files/neg/t7239.check
t7239.scala:10: error: not found: value foBar
    fooBar = foBar.toInt
             ^
one error found
